Fix multicols style on small devices.

--- a/_scss/layout.scss
+++ b/_scss/layout.scss
@@ -97,6 +97,13 @@ body,
 }
 
 // Style for markup generated by the multicols tag.
+.columns {
+  @include media-query-max($bp_medium) {
+    .column {
+      margin-bottom: 1em;
+    }
+  }
+}
 .columns-2.half {
   > .column {
     @include media-query($bp_small, $bp_medium) {
